--- a/src/index.css
+++ b/src/index.css
@@ -14,11 +14,13 @@
 }
 
 :root {
-  --main-font-family: "Noto Sans", sans-serif;
+  --main-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
   --light-color: #f8f9fa;
   --dark-color: #212529;
-  --main-bg-color: #05364b;
-  --secondary-color: #78ce92;
+  --main-bg-color: #505050;
+  --secondary-color: #78b7ce;
 }
 
 body {
@@ -34,6 +36,10 @@ body {
 
 * {
   color: var(--light-color);
+}
+
+.active-nav {
+  color: var(--secondary-color);
 }
 
 .about-me {
