--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,4 @@
-.flex-row {
-    display: flex;
-    flex-wrap: wrap;
-}
 
-.mx-1 {
-  margin-right: var(--spacing-one);
-  margin-left: var(--spacing-one);
-}
-  
-.mx-2 {
-  margin-right: var(--spacing-two);
-  margin-left: var(--spacing-two);
-}
 
 :root {
   --main-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -19,8 +6,8 @@
   sans-serif;
   --light-color: #f8f9fa;
   --dark-color: #212529;
-  --main-bg-color: #505050;
-  --secondary-color: #78b7ce;
+  --main-bg-color: #447172;
+  --secondary-color: #8feef9;
 }
 
 body {
@@ -38,8 +25,12 @@ body {
   color: var(--light-color);
 }
 
-.active-nav {
-  color: var(--secondary-color);
+.change:hover {
+  color: var(--secondary-color) !important;
+}
+
+.nav-link {
+  color: var(--light-color);
 }
 
 .about-me {
@@ -51,4 +42,8 @@ body {
 .navbar-main {
   background-color: var(--main-bg-color);
   
+}
+
+.error-text {
+  color: rgb(255, 225, 0);
 }
